# sops-run

./: README.md  pyproject.toml  requirements.txt  sops-run
sops_run/: main.py
